# PDF2TextTranslator

./: .env.example  .gitignore  README.md  gradio_client_app.py  main.py  pyproject.toml  queue_server.py
functions/: ai_chat.py  pdf.py  pymupdf_test.py
